MonetDB5/src/mal/Tests/tst108.stable
# Monet Database Server V5.0
# Copyright (c) 1993-2004, CWI. All rights reserved.
# compiled for 32biti686-pc-linux-gnu/32bit.
# config:/ufs/mk/monet_5/src/mal/Tests/tst.conf
# dbfarm:/ufs/mk/monet_5/Linux/var/MonetDB
# dbname:demo
## analyse the basic interpreter loop
#
#	i:=0;
#barrier	v:=1;
#	leave v;
#	i:= 1;
#barrier t:= i<3;
#exit	v;
#	i:=i+1;
#	redo t;
#exit	t;
#	i:= 0;
#
!ERROR: exit-label 'v' doesnot match 't' in main[6]
!ERROR: label 't' not in guarded block in main[8]
!ERROR: exit-label 't' without begin-label in main[9]
function Admin.main():int;	# 0  (main:int)
    i := 0;	# 1  (i:int)<-($2:int)
barrier v := 1;	# 2  (v:int)<-($4:int) jump 6
    leave v;	# 3  (v:int) jump 6
    i := 1;	# 4  (i:int)<-($4:int)
barrier t := calc.<(i,3);	# 5 CALCcompLTintint (t:bit)<-(i:int)($6:int)
exit v;	# 6  (v:int)
    i := calc.+(i,1);	# 7 CALCbinaryADDintint (i:int)<-(i:int)($4:int)
    redo t;	# 8  (t:bit)
exit t;	# 9  (t:bit)
    i := 0;	# 10  (i:int)<-($2:int)
end main;	# 11  
>